# Ninlil-Runtime

./: .gitattributes  .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  NOTICE  README.md  SECURITY.md  THIRD-PARTY-NOTICES.md  requirements-traceability.yaml
.github/workflows/: ci.yml  esp-idf.yml
cmake/: NinlilConfig.cmake.in  abi_manifest_coverage.cmake  abi_manifest_golden.cmake  abi_manifest_repeatable.cmake  domain_scan_transport_begin_absent.cmake  installed_posix_sqlite_consumer_smoke.cmake  n6_tests_off_packaging.cmake  ninlil_c3_lab_ctest.cmake  ninlil_c4_c5_lab_ctest.cmake  ninlil_c6_lab_ctest.cmake  ninlil_esp_idf_port_sources.cmake  ninlil_esp_storage_sources.cmake  ninlil_m4_lab_ctest.cmake  ninlil_nrw1_t1b_ctest.cmake  ninlil_posix_sqlite_sqlite3.cmake  ninlil_r7_crypto_ctest.cmake  ninlil_r7_crypto_sources.cmake  ninlil_r7_wire_ctest.cmake  ninlil_r7_wire_sources.cmake  ninlil_runtime_private_sources.cmake  ninlil_sx1262_sources.cmake  ninlil_v1_integration_gate_ctest.cmake  ninlil_v1_lab_examples.cmake  posix_sqlite_package_surface_negative.cmake  private_subproject_smoke.cmake
docs/: 00-project-charter.md  01-architecture.md  02-application-contracts.md  03-identity-and-join.md  04-runtime-api-and-storage.md  05-security-and-compliance.md  06-versioning-and-compatibility.md  07-testing-and-quality.md  08-foundation-release.md  09-roadmap.md  10-kguard-integration.md  10-reference-application-integration.md  11-operator-model.md  12-foundation-abi.md  13-foundation-state-machine.md  14-foundation-ports-and-simulator.md  15-glossary.md  16-foundation-implementation-plan.md  17-foundation-domain-store.md  18-m3-prep-esp-idf-component.md  19-m3-control-byte-stream-framing.md  20-m3-basic-esp-idf-platform-adapters.md  21-m3-esp-idf-durable-storage.md  22-m3-owner-cell-agent-skeleton.md  23-usb-radio-boundary.md  24-r2-physical-compliance-permit-authority.md  25-u5-cell-operating-assignment.md  26-u6-transport-custody.md  27-r3-airtime-calculator.md  28-r4-sx1262-control-plane-backend.md  29-r5-lab-only-profile-loader.md  30-r6-secure-radio-wire.md  31-r7-crypto-provider-and-aead.md  32-r7-t1-nrw1-single-wire-codec.md  33-r7-t1b-context-binding-hkdf.md  34-r7-t1c-authenticated-hop-fresh-install-owner.md  README.md  release-history.md  v1-lab-developer.md  v1-lab-distribution-manifest.md  (+1 more)
docs/adr/: 0001-project-boundary-and-first-release.md  0002-eventfact-conflict-projection-precedence.md  0003-radio-usb-dependency-direction.md  0004-r2-durable-permit-authority.md  0005-u5-cell-operating-assignment-control-v2.md  0006-u6-transport-custody.md  0007-r3-airtime-calculator.md  0008-r4-sx1262-control-plane-backend.md  0009-r5-lab-only-profile-loader.md  0010-r6-secure-radio-wire.md  0011-r7-crypto-provider-boundary.md  0012-r7-t1-nrw1-single-wire-codec.md  0013-r7-t1b-context-binding-hkdf.md  0014-r7-t1c-authenticated-hop-fresh-install-owner.md  0015-d3s3-reference-execution-profile-v1.md  0016-u5-u6-product-neutral-editorial-refreeze.md  README.md
docs/reviews/: 2026-07-10-fable-review.md  2026-07-12-d3s2-completion-audit.md  2026-07-12-d3s2-oracle-selftest-performance.md  2026-07-12-d3s2-post-p0-reaudit.md  2026-07-16-d3s2-dsd1-composition.md  2026-07-16-d3s2-mode23-evidence-coherence.md  2026-07-16-d3s2-mode24-mode25-known-slot.md  2026-07-16-d3s3a-blob-lifecycle-freeze-self-review.md  2026-07-16-d3s4a-dsw1-all-old-new-freeze-self-review.md  2026-07-16-m3-prep-esp-idf-component.md  2026-07-16-u0-radio-usb-boundary-freeze-self-review.md  2026-07-17-r6-secure-radio-wire-freeze-self-review.md  2026-07-18-r6-chunk-d-n6-private-host-self-review.md  2026-07-19-r6-final-integration-re-go.md  2026-07-19-r6-rx-index-errata.md  2026-07-19-r7-t0-crypto-provider-accepted.md  2026-07-19-r7-t1-single-wire-codec-accepted.md  2026-07-19-r7-t1b-context-binding-hkdf-accepted.md  2026-07-20-d3s2-implementation-accepted.md  2026-07-20-d3s3-implementation-candidate.md  2026-07-24-u5-u6-product-neutral-refreeze.md  README.md
docs/work/: 2026-07-21-6h-parallel-queue.md  2026-07-21-a2-d3s4-witness-plan.md  2026-07-21-a3-s5-freeze-draft.md  2026-07-21-a3s5-port-review.md  2026-07-21-a3s5-review-r1.md  2026-07-21-a3s5-review-r2.md  2026-07-21-a3s5-review-r3.md  2026-07-21-a3s5-review-r4.md  2026-07-21-a3s5-review-r5.md  2026-07-21-a3s5-review-r6-go.md  2026-07-21-adr0015-review-r1.md  2026-07-21-adr0015-review-r2.md  2026-07-21-b1-contract-audit.md  2026-07-21-b1-plan-review-r1.md  2026-07-21-b1-plan-review-r2.md  2026-07-21-b1-plan-review-r3.md  2026-07-21-b1-plan-review-r4.md  2026-07-21-b1-plan-review-r5.md  2026-07-21-b1-plan-review-r6-go.md  2026-07-21-b1-runtime-body-plan-draft.md  2026-07-21-master-plan.md  (+34 more)
schemas/: foundation-m1a-reason-codes.yaml
tests/cmake/installed_posix_sqlite_consumer/: CMakeLists.txt  consumer.c
tests/cmake/private_subproject/: CMakeLists.txt  consumer.c  private_consumer.c
tools/: abi_drift_schema.c  abi_drift_schema.h  abi_drift_test.c  abi_drift_tool.c  abi_manifest_constants.inc  abi_manifest_coverage_test.c  abi_manifest_gen.c  abi_manifest_structs.inc  airtime_r3_gate.py  airtime_r3_oracle.py  byte_stream_portability_gate.py  c6_lab_enforcement_gate.py  cmake_generated_fixture_source_gate.py  control_frame_vector_gen.py  control_session_u3_gate.py  domain_scan_composition_vector_gen.py  domain_scan_crossrow_d3s2_vector_gen.py  domain_scan_crossrow_d3s3_vector_gen.py  domain_scan_crossrow_vector_gen.py  domain_scan_d3s2_semantic_oracle.py  domain_scan_d3s2_wire_fixture_gen.py  domain_scan_dsd1_composition_vector_gen.py  domain_scan_dsr2_gate.py  domain_scan_exact_get_vector_gen.py  domain_scan_profile_vector_gen.py  domain_scan_structural_vector_gen.py  domain_scan_vector_gen.py  domain_store_vector_gen.py  esp_idf_app_main_frame_gate.py  esp_idf_component_packaging_gate.py  esp_idf_private_symbol_gate.py  esp_storage_budget_gate.py  esp_storage_map_gate.py  esp_storage_public_api_gate.py  esp_storage_stack_gate.py  esp_storage_wear_gate.py  esp_usb_cdc_u2_gate.py  hook_registry_schema.c  hook_registry_schema.h  hook_registry_test.c  (+65 more)
(+417 files in other folders)
